Eliminar caracter zero width space U+200B

--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -919,7 +919,7 @@ msgid ""
 "Control the validation behavior of hash-based ``.pyc`` files: value of the :"
 "option:`--check-hash-based-pycs` command line option."
 msgstr ""
-"Controla el comportamiento de validación de archivos ``.pyc`` basados ​​en "
+"Controla el comportamiento de validación de archivos ``.pyc`` basados en "
 "hash: valor de la opción de línea de comando :option:`--check-hash-based-"
 "pycs`."
 
@@ -938,14 +938,14 @@ msgstr ""
 #: ../Doc/c-api/init_config.rst:608
 msgid "``L\"never\"``: Assume that hash-based pycs always are valid."
 msgstr ""
-"``L\"never\"``: suponga que los pycs basados ​​en hash siempre son válidos."
+"``L\"never\"``: suponga que los pycs basados en hash siempre son válidos."
 
 #: ../Doc/c-api/init_config.rst:609
 msgid ""
 "``L\"default\"``: The 'check_source' flag in hash-based pycs determines "
 "invalidation."
 msgstr ""
-"``L\"default\"``: El indicador 'check_source' en pycs basados ​​en hash "
+"``L\"default\"``: El indicador 'check_source' en pycs basados en hash "
 "determina la invalidación."
 
 #: ../Doc/c-api/init_config.rst:612
@@ -1417,7 +1417,7 @@ msgid ""
 "The list of the original command line arguments passed to the Python "
 "executable: :data:`sys.orig_argv`."
 msgstr ""
-"La lista de los argumentos originales de la línea de comandos pasados ​​al "
+"La lista de los argumentos originales de la línea de comandos pasados al "
 "ejecutable de Python: :data:`sys.orig_argv`."
 
 #: ../Doc/c-api/init_config.rst:888
