--- a/faq/windows.po
+++ b/faq/windows.po
@@ -86,7 +86,7 @@ msgid ""
 "compiles it into bytecodes, and then executes the bytecodes to run your "
 "program. So, how do you arrange for the interpreter to handle your Python?"
 msgstr ""
-"Tenga en cuenta que sus scripts de Python deben ser procesados ​​por otro "
+"Tenga en cuenta que sus scripts de Python deben ser procesados por otro "
 "programa llamado \"intérprete\" de Python. El intérprete lee su script, lo "
 "compila en *bytecode* y ejecuta el *bytecode* para ejecutar su programa. "
 "Entonces, ¿cómo le das tu código Python al intérprete?"
@@ -528,5 +528,5 @@ msgstr ""
 #~ "Consulte `cx_Freeze <https://anthony-tuininga.github.io/cx_Freeze/>`_ "
 #~ "para obtener una extensión distutils que le permite crear ejecutables de "
 #~ "consola y GUI a partir del código Python. `py2exe <http://www.py2exe.org/"
-#~ ">`_ es la extensión más popular para construir ejecutables basados ​​en "
+#~ ">`_ es la extensión más popular para construir ejecutables basados en "
 #~ "Python 2.x, pero la implementación en Python 3 está en desarrollo."
