Fix union operator translation
Closes #1818

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -889,7 +889,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:716
 msgid "PEP 604: New Type Union Operator"
-msgstr "PEP 604: Nuevo tipo de operador sindical"
+msgstr "PEP 604: Nuevo tipo de operador unión"
 
 #: ../Doc/whatsnew/3.10.rst:718
 msgid ""
