--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -73,7 +73,7 @@ msgstr "Nuevas funciones de sintaxis:"
 
 #: ../Doc/whatsnew/3.9.rst:65
 msgid ":pep:`584`, union operators added to ``dict``;"
-msgstr ":pep:`584`, operadores sindicales agregados a ``dict``;"
+msgstr ":pep:`584`, operadores unión agregados a ``dict``;"
 
 #: ../Doc/whatsnew/3.9.rst:66
 msgid ":pep:`585`, type hinting generics in standard collections;"
