Eliminar caracter zero width space U+200B (#1817)
* Eliminar caracter zero width space U+200B
* powrap

--- a/faq/windows.po
+++ b/faq/windows.po
@@ -86,7 +86,7 @@ msgid ""
 "compiles it into bytecodes, and then executes the bytecodes to run your "
 "program. So, how do you arrange for the interpreter to handle your Python?"
 msgstr ""
-"Tenga en cuenta que sus scripts de Python deben ser procesados ​​por otro "
+"Tenga en cuenta que sus scripts de Python deben ser procesados por otro "
 "programa llamado \"intérprete\" de Python. El intérprete lee su script, lo "
 "compila en *bytecode* y ejecuta el *bytecode* para ejecutar su programa. "
 "Entonces, ¿cómo le das tu código Python al intérprete?"
