--- a/faq/programming.po
+++ b/faq/programming.po
@@ -10,17 +10,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-16 21:42+0200\n"
+"POT-Creation-Date: 2022-01-25 13:19+0100\n"
 "PO-Revision-Date: 2021-12-11 15:36-0300\n"
 "Last-Translator: Juan C. Tello <juanctello@gmail.com>\n"
-"Language-Team: python-doc-es\n"
 "Language: es\n"
+"Language-Team: python-doc-es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.9.1\n"
-"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/programming.rst:5
 msgid "Programming FAQ"
@@ -3134,8 +3133,9 @@ msgstr ""
 "importados)."
 
 #: ../Doc/faq/programming.rst:2095
+#, fuzzy
 msgid ""
-"van Rossum doesn't like this approach much because the imports appear in a "
+"Van Rossum doesn't like this approach much because the imports appear in a "
 "strange place, but it does work."
 msgstr ""
 "este enfoque no le gusta mucho a van Rossum debido a que los import aparecen "
