--- a/tutorial/floatingpoint.po
+++ b/tutorial/floatingpoint.po
@@ -10,15 +10,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-16 21:42+0200\n"
+"POT-Creation-Date: 2022-01-25 13:19+0100\n"
 "PO-Revision-Date: 2021-08-02 19:49+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language-Team: python-doc-es\n"
 "Language: es\n"
+"Language-Team: python-doc-es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/floatingpoint.rst:9
@@ -235,12 +235,13 @@ msgstr ""
 "entre sí::"
 
 #: ../Doc/tutorial/floatingpoint.rst:134
+#, fuzzy
 msgid ""
 "Binary floating-point arithmetic holds many surprises like this.  The "
 "problem with \"0.1\" is explained in precise detail below, in the "
-"\"Representation Error\" section.  See `The Perils of Floating Point <http://"
-"www.lahey.com/float.htm>`_ for a more complete account of other common "
-"surprises."
+"\"Representation Error\" section.  See `The Perils of Floating Point "
+"<https://www.lahey.com/float.htm>`_ for a more complete account of other "
+"common surprises."
 msgstr ""
 "La aritmética de punto flotante binaria tiene varias sorpresas como esta. El "
 "problema con \"0.1\" es explicado con detalle abajo, en la sección \"Error "
