--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-16 21:42+0200\n"
+"POT-Creation-Date: 2022-01-25 13:19+0100\n"
 "PO-Revision-Date: 2021-08-02 01:43+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language-Team: \n"
 "Language: es\n"
+"Language-Team: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/c-api/init_config.rst:7
@@ -990,7 +990,8 @@ msgstr ""
 "<devmode>`."
 
 #: ../Doc/c-api/init_config.rst:637
-msgid "Dump Python refererences?"
+#, fuzzy
+msgid "Dump Python references?"
 msgstr "¿Volcar referencias de Python?"
 
 #: ../Doc/c-api/init_config.rst:639
