--- a/copyright.po
+++ b/copyright.po
@@ -10,17 +10,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-19 11:16+0100\n"
+"POT-Creation-Date: 2022-01-25 13:19+0100\n"
 "PO-Revision-Date: 2021-08-04 10:56+0200\n"
-"Language-Team: python-doc-es\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 3.0\n"
+"Language-Team: python-doc-es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/copyright.rst:3
 msgid "Copyright"
@@ -31,7 +30,8 @@ msgid "Python and this documentation is:"
 msgstr "Python y esta documentación es:"
 
 #: ../Doc/copyright.rst:7
-msgid "Copyright © 2001-2021 Python Software Foundation. All rights reserved."
+#, fuzzy
+msgid "Copyright © 2001-2022 Python Software Foundation. All rights reserved."
 msgstr ""
 "Derechos de autor © 2001-2021 Python Software Foundation. Todos los derechos "
 "reservados."
@@ -45,15 +45,15 @@ msgid ""
 "Copyright © 1995-2000 Corporation for National Research Initiatives. All "
 "rights reserved."
 msgstr ""
-"Derechos de autor © 1995-2000 Corporation for National Research Initiatives. Todos "
-"los derechos reservados."
+"Derechos de autor © 1995-2000 Corporation for National Research Initiatives. "
+"Todos los derechos reservados."
 
 #: ../Doc/copyright.rst:14
 msgid ""
 "Copyright © 1991-1995 Stichting Mathematisch Centrum. All rights reserved."
 msgstr ""
-"Derechos de autor © 1991-1995 Stichting Mathematisch Centrum.  Todos los derechos "
-"reservados."
+"Derechos de autor © 1991-1995 Stichting Mathematisch Centrum.  Todos los "
+"derechos reservados."
 
 #: ../Doc/copyright.rst:18
 msgid ""
