--- a/reference/lexical_analysis.po
+++ b/reference/lexical_analysis.po
@@ -10,17 +10,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-16 21:42+0200\n"
+"POT-Creation-Date: 2022-01-25 13:19+0100\n"
 "PO-Revision-Date: 2021-10-30 14:13-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
-"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/lexical_analysis.rst:6
 msgid "Lexical analysis"
@@ -728,12 +727,14 @@ msgstr ""
 "léxicas:"
 
 #: ../Doc/reference/lexical_analysis.rst:471
+#, fuzzy
 msgid ""
 "One syntactic restriction not indicated by these productions is that "
-"whitespace is not allowed between the :token:`stringprefix` or :token:"
-"`bytesprefix` and the rest of the literal. The source character set is "
-"defined by the encoding declaration; it is UTF-8 if no encoding declaration "
-"is given in the source file; see section :ref:`encodings`."
+"whitespace is not allowed between the :token:`~python-grammar:stringprefix` "
+"or :token:`~python-grammar:bytesprefix` and the rest of the literal. The "
+"source character set is defined by the encoding declaration; it is UTF-8 if "
+"no encoding declaration is given in the source file; see section :ref:"
+"`encodings`."
 msgstr ""
 "Una restricción sintáctica que no se indica en estas producciones es que no "
 "se permiten espacios en blanco entre el :token:`stringprefix` o :token:"
