Sugerencia menor como alternative para shortcut

--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -95,7 +95,7 @@ msgstr ""
 "interactiva, sustitución de historial y completado de código en sistemas que "
 "soportan `GNU Readline <https://tiswww.case.edu/php/chet/readline/rltop."
 "html>`_ librería. Quizás la forma más rápida para comprobar si las "
-"características de edición se encuentran disponibles es escribir :kbd:"
+"características de edición se encuentran disponibles es presionar :kbd:"
 "`Control-P` en el primer prompt de Python que aparezca. Si se escucha un "
 "sonido, tienes edición de línea de comandos; ver Apéndice :ref:`tut-"
 "interacting` para una introducción a las teclas. Si no parece que ocurra "
