Usar 'lanzar' para 'raise' (#1816)
* Usar 'lanzar' para 'raise'

* Apply suggestions from code review

Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/object.po
+++ b/c-api/object.po
@@ -123,7 +123,7 @@ msgstr ""
 "`~object.__ dict__` (si está presente). Como se describe en :ref:"
 "`descriptors`, los descriptores de datos tienen preferencia sobre los "
 "atributos de instancia, mientras que los descriptores que no son de datos no "
-"lo hacen. De lo contrario, se genera un :exc:`AttributeError`."
+"lo hacen. De lo contrario, se lanza un :exc:`AttributeError`."
 
 #: ../Doc/c-api/object.rst:79 ../Doc/c-api/object.rst:90
 msgid ""
@@ -132,9 +132,9 @@ msgid ""
 "success.  This is the equivalent of the Python statement ``o.attr_name = v``."
 msgstr ""
 "Establece el valor del atributo llamado *attr_name*, para el objeto *o*, en "
-"el valor *v*. Genera una excepción y retorna ``-1`` en caso de falla; "
-"retorna ``0`` en caso de éxito. Este es el equivalente de la declaración de "
-"Python ``o.attr_name = v``."
+"el valor *v*. Lanza una excepción y retorna ``-1`` en caso de falla; retorna "
+"``0`` en caso de éxito. Este es el equivalente de la declaración de Python "
+"``o.attr_name = v``."
 
 #: ../Doc/c-api/object.rst:84
 msgid ""
@@ -170,7 +170,7 @@ msgstr ""
 "la configuración o eliminación del atributo en el diccionario de instancias. "
 "De lo contrario, el atributo se establece o elimina en el objeto :attr:"
 "`~object.__dict__` (si está presente). En caso de éxito, se retorna ``0``; "
-"de lo contrario, se genera un :exc:`AttributeError` y se retorna ``-1``."
+"de lo contrario, se lanza un :exc:`AttributeError` y se retorna ``-1``."
 
 #: ../Doc/c-api/object.rst:113 ../Doc/c-api/object.rst:119
 msgid ""
@@ -497,10 +497,10 @@ msgid ""
 "on failure; return ``0`` on success.  This is the equivalent of the Python "
 "statement ``o[key] = v``.  This function *does not* steal a reference to *v*."
 msgstr ""
-"Asigna el objeto *key* al valor *v*. Genera una excepción y retorna ``-1`` "
-"en caso de error; retorna ``0`` en caso de éxito. Este es el equivalente de "
-"la declaración de Python ``o[key] = v``. Esta función *no* roba una "
-"referencia a *v*."
+"Asigna el objeto *key* al valor *v*. Lanza una excepción y retorna ``-1`` en "
+"caso de error; retorna ``0`` en caso de éxito. Este es el equivalente de la "
+"declaración de Python ``o[key] = v``. Esta función *no* roba una referencia "
+"a *v*."
 
 #: ../Doc/c-api/object.rst:340
 msgid ""
