--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -506,7 +506,7 @@ msgid ""
 "``-1`` if this is not possible.  This macro does not raise exceptions."
 msgstr ""
 "Retorna el carácter *ch* convertido a un entero positivo decimal. Retorna "
-"``-1`` si esto no es posible. Esta macro no genera excepciones."
+"``-1`` si esto no es posible. Esta macro no lanza excepciones."
 
 #: ../Doc/c-api/unicode.rst:367
 msgid ""
@@ -514,7 +514,7 @@ msgid ""
 "if this is not possible.  This macro does not raise exceptions."
 msgstr ""
 "Retorna el carácter *ch* convertido a un entero de un solo dígito. Retorna "
-"``-1`` si esto no es posible. Esta macro no genera excepciones."
+"``-1`` si esto no es posible. Esta macro no lanza excepciones."
 
 #: ../Doc/c-api/unicode.rst:373
 msgid ""
@@ -522,7 +522,7 @@ msgid ""
 "not possible.  This macro does not raise exceptions."
 msgstr ""
 "Retorna el carácter *ch* convertido a doble. retorne ``-1.0`` si esto no es "
-"posible. Esta macro no genera excepciones."
+"posible. Esta macro no lanza excepciones."
 
 #: ../Doc/c-api/unicode.rst:377
 msgid "These APIs can be used to work with surrogates:"
@@ -1039,7 +1039,7 @@ msgid ""
 "Return the number of written character, or return ``-1`` and raise an "
 "exception on error."
 msgstr ""
-"Retorna el número de caracteres escritos o retorna ``-1`` y genera una "
+"Retorna el número de caracteres escritos o retorna ``-1`` y lanza una "
 "excepción en caso de error."
 
 #: ../Doc/c-api/unicode.rst:625
@@ -2626,7 +2626,7 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:1682
 msgid "This function does not raise exceptions."
-msgstr "Esta función no genera excepciones."
+msgstr "Esta función no lanza excepciones."
 
 #: ../Doc/c-api/unicode.rst:1687
 msgid "Rich compare two Unicode strings and return one of the following:"
