--- a/tutorial/datastructures.po
+++ b/tutorial/datastructures.po
@@ -818,8 +818,8 @@ msgstr ""
 "siempre y cuando los objetas tenga los métodos de comparación apropiados.  "
 "Por ejemplo, los tipos de números mezclados son comparados de acuerdo a su "
 "valor numérico, o sea 0 es igual a 0.0, etc.  Si no es el caso, en lugar de "
-"proveer un ordenamiento arbitrario, el intérprete generará una excepción :"
-"exc:`TypeError`."
+"proveer un ordenamiento arbitrario, el intérprete lanzará una excepción :exc:"
+"`TypeError`."
 
 #: ../Doc/tutorial/datastructures.rst:731
 msgid "Footnotes"
