--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -296,7 +296,7 @@ msgid ""
 "Raises an :ref:`auditing event <auditing>` ``cpython.run_stdin`` with no "
 "arguments."
 msgstr ""
-"Genera un evento :ref:`auditing event <auditing>` ``cpython.run_stdin`` sin "
+"Lanza un evento :ref:`auditing event <auditing>` ``cpython.run_stdin`` sin "
 "argumentos."
 
 #: ../Doc/using/cmdline.rst:146
@@ -500,7 +500,7 @@ msgid ""
 "script raises an exception.  See also :envvar:`PYTHONINSPECT`."
 msgstr ""
 "Esto puede ser útil para inspeccionar variables globales o un seguimiento de "
-"pila cuando un script genera una excepción.  Véase también :envvar:"
+"pila cuando un script lanza una excepción.  Véase también :envvar:"
 "`PYTHONINSPECT`."
 
 #: ../Doc/using/cmdline.rst:274
