--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -24,11 +24,11 @@ msgstr "Novedades de Python 3.9"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Release"
-msgstr "Liberación"
+msgstr "Versión"
 
 #: ../Doc/whatsnew/3.9.rst:5
 msgid "|release|"
-msgstr "| liberación |"
+msgstr "| versión |"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Date"
