Fix built-in Sphinx substitutions.

--- a/using/windows.po
+++ b/using/windows.po
@@ -65,7 +65,7 @@ msgid ""
 msgstr ""
 "Como se especifica en :pep:`11`, una versión de Python solo admite una "
 "plataforma Windows, mientras que Microsoft considera la plataforma con "
-"soporte extendido. Esto significa que Python | versión | es compatible con "
+"soporte extendido. Esto significa que Python |version| es compatible con "
 "Windows 8.1 y versiones posteriores. Si necesita compatibilidad con Windows "
 "7, instale Python 3.8."
 
