--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -30,7 +30,7 @@ msgstr "Liberación"
 
 #: ../Doc/whatsnew/3.10.rst:5
 msgid "|release|"
-msgstr "| liberación |"
+msgstr "|release|"
 
 #: ../Doc/whatsnew/3.10.rst
 msgid "Date"
@@ -38,7 +38,7 @@ msgstr "Fecha"
 
 #: ../Doc/whatsnew/3.10.rst:6
 msgid "|today|"
-msgstr "| hoy |"
+msgstr "|today|"
 
 #: ../Doc/whatsnew/3.10.rst
 msgid "Editor"
