--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -28,7 +28,7 @@ msgstr "Liberación"
 
 #: ../Doc/whatsnew/3.9.rst:5
 msgid "|release|"
-msgstr "| liberación |"
+msgstr "|release|"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Date"
@@ -36,7 +36,7 @@ msgstr "Fecha"
 
 #: ../Doc/whatsnew/3.9.rst:6
 msgid "|today|"
-msgstr "| hoy |"
+msgstr "|today|"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Editor"
