Traducido Release en whatsnew/3.10

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -26,7 +26,7 @@ msgstr "Novedades de Python 3.10"
 
 #: ../Doc/whatsnew/3.10.rst
 msgid "Release"
-msgstr "Liberación"
+msgstr "Versión"
 
 #: ../Doc/whatsnew/3.10.rst:5
 msgid "|release|"
