--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -223,8 +223,8 @@ msgid ""
 "Replace the unicode encode error with backslash escapes (``\\x``, ``\\u`` "
 "and ``\\U``)."
 msgstr ""
-"Reemplaza el error de codificación Unicode con escapes de barra invertida (``"
-"\\x``, ``\\u`` y ``\\U``)."
+"Reemplaza el error de codificación Unicode con escapes de barra invertida "
+"(``\\x``, ``\\u`` y ``\\U``)."
 
 #: ../Doc/c-api/codec.rst:129
 msgid "Replace the unicode encode error with ``\\N{...}`` escapes."
