--- a/c-api/gcsupport.po
+++ b/c-api/gcsupport.po
@@ -29,11 +29,11 @@ msgstr "Apoyo a la recolección de basura cíclica"
 #: ../Doc/c-api/gcsupport.rst:8
 msgid ""
 "Python's support for detecting and collecting garbage which involves "
-"circular references requires support from object types which are \"containers"
-"\" for other objects which may also be containers.  Types which do not store "
-"references to other objects, or which only store references to atomic types "
-"(such as numbers or strings), do not need to provide any explicit support "
-"for garbage collection."
+"circular references requires support from object types which are "
+"\"containers\" for other objects which may also be containers.  Types which "
+"do not store references to other objects, or which only store references to "
+"atomic types (such as numbers or strings), do not need to provide any "
+"explicit support for garbage collection."
 msgstr ""
 "El soporte de Python para detectar y recolectar basura que involucra "
 "referencias circulares requiere el soporte de tipos de objetos que son "
