--- a/distutils/index.po
+++ b/distutils/index.po
@@ -95,8 +95,9 @@ msgid ""
 "capabilities that ``setuptools`` builds on to allow Python developers to "
 "make Python modules and extensions readily available to a wider audience."
 msgstr ""
-"Este documento describe las utilidades de distribución de Python (\"Distutils"
-"\") desde el punto de vista del desarrollador del módulo, describiendo las "
-"capacidades subyacentes sobre las que se basan las ``setuptools`` para "
-"permitir que los desarrolladores de Python hagan que los módulos y "
-"extensiones de Python estén disponibles para una audiencia más amplia."
+"Este documento describe las utilidades de distribución de Python "
+"(\"Distutils\") desde el punto de vista del desarrollador del módulo, "
+"describiendo las capacidades subyacentes sobre las que se basan las "
+"``setuptools`` para permitir que los desarrolladores de Python hagan que los "
+"módulos y extensiones de Python estén disponibles para una audiencia más "
+"amplia."
