--- a/distutils/setupscript.po
+++ b/distutils/setupscript.po
@@ -1248,8 +1248,8 @@ msgid ""
 "option which is deprecated but still acts as an alias for ``license``."
 msgstr ""
 "El campo ``license`` es un texto que indica la licencia que cubre el paquete "
-"donde la licencia no es una selección de los clasificadores de Trove *"
-"\"License\"*. Vea el campo ``Classifier``. Tenga en cuenta que hay una "
+"donde la licencia no es una selección de los clasificadores de Trove "
+"*\"License\"*. Vea el campo ``Classifier``. Tenga en cuenta que hay una "
 "opción de distribución de ``license`` que está en desuso pero que aún actúa "
 "como un alias para la ``license``."
 
