--- a/tutorial/stdlib2.po
+++ b/tutorial/stdlib2.po
@@ -101,8 +101,8 @@ msgstr ""
 "El formato usa marcadores cuyos nombres se forman con ``$`` seguido de "
 "identificadores Python válidos (caracteres alfanuméricos y guión de "
 "subrayado). Si se los encierra entre llaves, pueden seguir más caracteres "
-"alfanuméricos sin necesidad de dejar espacios en blanco. ``$$`` genera un ``"
-"$``::"
+"alfanuméricos sin necesidad de dejar espacios en blanco. ``$$`` genera un "
+"``$``::"
 
 #: ../Doc/tutorial/stdlib2.rst:88
 msgid ""
@@ -151,9 +151,10 @@ msgid ""
 "The :mod:`struct` module provides :func:`~struct.pack` and :func:`~struct."
 "unpack` functions for working with variable length binary record formats.  "
 "The following example shows how to loop through header information in a ZIP "
-"file without using the :mod:`zipfile` module.  Pack codes ``\"H\"`` and ``\"I"
-"\"`` represent two and four byte unsigned numbers respectively.  The ``\"<"
-"\"`` indicates that they are standard size and in little-endian byte order::"
+"file without using the :mod:`zipfile` module.  Pack codes ``\"H\"`` and "
+"``\"I\"`` represent two and four byte unsigned numbers respectively.  The "
+"``\"<\"`` indicates that they are standard size and in little-endian byte "
+"order::"
 msgstr ""
 "El módulo :mod:`struct` provee las funciones :func:`~struct.pack` y :func:"
 "`~struct.unpack` para trabajar con formatos de registros binarios de "
@@ -327,8 +328,8 @@ msgstr ""
 "El módulo :mod:`array` provee un objeto :class:`~array.array()` (vector) que "
 "es como una lista que almacena sólo datos homogéneos y de una manera más "
 "compacta.  Los ejemplos a continuación muestran un vector de números "
-"guardados como dos números binarios sin signo de dos bytes (código de tipo ``"
-"\"H\"``) en lugar de los 16 bytes por elemento habituales en listas de "
+"guardados como dos números binarios sin signo de dos bytes (código de tipo "
+"``\"H\"``) en lugar de los 16 bytes por elemento habituales en listas de "
 "objetos int de Python::"
 
 #: ../Doc/tutorial/stdlib2.rst:308
