--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -242,10 +242,10 @@ msgstr ""
 
 #: ../Doc/tutorial/introduction.rst:192
 msgid ""
-"String literals can span multiple lines.  One way is using triple-quotes: ``"
-"\"\"\"...\"\"\"`` or ``'''...'''``.  End of lines are automatically included "
-"in the string, but it's possible to prevent this by adding a ``\\`` at the "
-"end of the line.  The following example::"
+"String literals can span multiple lines.  One way is using triple-quotes: "
+"``\"\"\"...\"\"\"`` or ``'''...'''``.  End of lines are automatically "
+"included in the string, but it's possible to prevent this by adding a ``\\`` "
+"at the end of the line.  The following example::"
 msgstr ""
 "Las cadenas de texto literales pueden contener múltiples líneas. Una forma "
 "es usar triples comillas: ``\"\"\"...\"\"\"`` o ``'''...'''``. Los fin de "
