--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2020-05-09 13:56+0200\n"
-"Last-Translator: \n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-26 19:26+0100\n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/tutorial/introduction.rst:5
 msgid "An Informal Introduction to Python"
@@ -49,6 +50,10 @@ msgid ""
 "output for an example, then you can easily copy and paste the input lines "
 "into your interpreter."
 msgstr ""
+"Puede alternar la visualización de mensajes y salida haciendo clic en  "
+"``>>>`` en la esquina superior derecha de un cuadro de ejemplo.  Si oculta "
+"las indicaciones y la salida para un ejemplo, puede copiar y pegar "
+"fácilmente las líneas de entrada en su intérprete."
 
 #: ../Doc/tutorial/introduction.rst:23
 msgid ""
@@ -115,16 +120,14 @@ msgstr ""
 "adelante en el tutorial."
 
 #: ../Doc/tutorial/introduction.rst:72
-#, fuzzy
 msgid ""
 "Division (``/``) always returns a float.  To do :term:`floor division` and "
 "get an integer result you can use the ``//`` operator; to calculate the "
 "remainder you can use ``%``::"
 msgstr ""
-"La división (``/``) siempre retorna un punto flotante. Para hacer :term:"
-"`floor division` y obtener un resultado entero (descartando cualquier "
-"resultado fraccionario) puede usarse el operador ``//``; para calcular el "
-"resto puedes usar ``%``::"
+"La división (``/``) siempre retorna un número decimal de punto flotante. "
+"Para hacer :term:`floor division` y obtener un número entero como resultado  "
+"puede usarse el operador ``//``; para calcular el resto puedes usar ``%``::"
 
 #: ../Doc/tutorial/introduction.rst:86
 msgid ""
