--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -8,18 +8,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Python 3.8\n"
+"Project-Id-Version: Python 3.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-22 08:58-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-27 03:12-0300\n"
+"Last-Translator: Marco Richetta <marcorichetta@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: ../Doc/c-api/memory.rst:8
 msgid "Memory Management"
@@ -120,7 +121,6 @@ msgstr ""
 "solo participa en la asignación del objeto de bytes retornado como resultado."
 
 #: ../Doc/c-api/memory.rst:72
-#, fuzzy
 msgid ""
 "In most situations, however, it is recommended to allocate memory from the "
 "Python heap specifically because the latter is under control of the Python "
@@ -280,12 +280,11 @@ msgstr ""
 
 #: ../Doc/c-api/memory.rst:144 ../Doc/c-api/memory.rst:215
 #: ../Doc/c-api/memory.rst:323
-#, fuzzy
 msgid ""
 "Allocates *n* bytes and returns a pointer of type :c:expr:`void*` to the "
 "allocated memory, or ``NULL`` if the request fails."
 msgstr ""
-"Asigna *n* bytes y retorna un puntero de tipo :c:type:`void*` a la memoria "
+"Asigna *n* bytes y retorna un puntero de tipo :c:expr:`void*` a la memoria "
 "asignada, o ``NULL`` si la solicitud falla."
 
 #: ../Doc/c-api/memory.rst:147
@@ -300,14 +299,13 @@ msgstr ""
 
 #: ../Doc/c-api/memory.rst:154 ../Doc/c-api/memory.rst:225
 #: ../Doc/c-api/memory.rst:333
-#, fuzzy
 msgid ""
 "Allocates *nelem* elements each whose size in bytes is *elsize* and returns "
 "a pointer of type :c:expr:`void*` to the allocated memory, or ``NULL`` if "
 "the request fails. The memory is initialized to zeros."
 msgstr ""
 "Asigna *nelem* elementos cada uno cuyo tamaño en bytes es *elsize* y retorna "
-"un puntero de tipo :c:type:`void*` a la memoria asignada, o ``NULL`` si la "
+"un puntero de tipo :c:expr:`void*` a la memoria asignada, o ``NULL`` si la "
 "solicitud falla. La memoria se inicializa a ceros."
 
 #: ../Doc/c-api/memory.rst:158
@@ -480,18 +478,16 @@ msgstr ""
 "Tenga en cuenta que *TYPE* se refiere a cualquier tipo de C."
 
 #: ../Doc/c-api/memory.rst:267
-#, fuzzy
 msgid ""
 "Same as :c:func:`PyMem_Malloc`, but allocates ``(n * sizeof(TYPE))`` bytes "
 "of memory.  Returns a pointer cast to :c:expr:`TYPE*`.  The memory will not "
 "have been initialized in any way."
 msgstr ""
 "Igual que :c:func:`PyMem_Malloc`, pero asigna ``(n * sizeof(TYPE))`` bytes "
-"de memoria. Retorna una conversión de puntero a :c:type:`TYPE*`. La memoria "
+"de memoria. Retorna una conversión de puntero a :c:expr:`TYPE*`. La memoria "
 "no se habrá inicializado de ninguna manera."
 
 #: ../Doc/c-api/memory.rst:274
-#, fuzzy
 msgid ""
 "Same as :c:func:`PyMem_Realloc`, but the memory block is resized to ``(n * "
 "sizeof(TYPE))`` bytes.  Returns a pointer cast to :c:expr:`TYPE*`. On "
@@ -500,7 +496,7 @@ msgid ""
 msgstr ""
 "Igual que :c:func:`PyMem_Realloc`, pero el bloque de memoria cambia de "
 "tamaño a ``(n * sizeof(TYPE))`` bytes. Retorna una conversión de puntero a :"
-"c:type:`TYPE*`. Al retornar, *p* será un puntero a la nueva área de memoria, "
+"c:expr:`TYPE*`. Al retornar, *p* será un puntero a la nueva área de memoria, "
 "o ``NULL`` en caso de falla."
 
 #: ../Doc/c-api/memory.rst:279
@@ -557,7 +553,6 @@ msgid "Object allocators"
 msgstr "Asignadores de objetos"
 
 #: ../Doc/c-api/memory.rst:308
-#, fuzzy
 msgid ""
 "There is no guarantee that the memory returned by these allocators can be "
 "successfully cast to a Python object when intercepting the allocating "
@@ -755,7 +750,6 @@ msgid "Customize Memory Allocators"
 msgstr "Personalizar asignadores de memoria"
 
 #: ../Doc/c-api/memory.rst:405
-#, fuzzy
 msgid ""
 "Structure used to describe a memory block allocator. The structure has the "
 "following fields:"
@@ -917,13 +911,15 @@ msgid ""
 "See also :c:member:`PyPreConfig.allocator` and :ref:`Preinitialize Python "
 "with PyPreConfig <c-preinit>`."
 msgstr ""
+"Vea también :c:member:`PyPreConfig.allocator` y :ref:`Preinicialización de "
+"Python con PyPreConfig <c-preinit>`."
 
 #: ../Doc/c-api/memory.rst:484
 msgid ""
 "Setup :ref:`debug hooks in the Python memory allocators <pymem-debug-hooks>` "
 "to detect memory errors."
 msgstr ""
-"Configuración :ref:`enlaces de depuración en los asignadores de memoria de "
+"Configurar :ref:`enlaces de depuración en los asignadores de memoria de "
 "Python <pymem-debug-hooks>` para detectar errores de memoria."
 
 #: ../Doc/c-api/memory.rst:491
