--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-07 09:59+0100\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-28 00:38+0200\n"
+"Last-Translator: Jaime Resano <resano.138736@e.unavarra.es>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/whatsnew/2.1.rst:3
 msgid "What's New in Python 2.1"
@@ -437,18 +438,18 @@ msgstr ""
 msgid ""
 "The built-in ``cmp(A,B)`` function can use the rich comparison machinery, "
 "and now accepts an optional argument specifying which comparison operation "
-"to use; this is given as one of the strings ``\"<\"``, ``\"<=\"``, "
-"``\">\"``, ``\">=\"``, ``\"==\"``, or ``\"!=\"``.  If called without the "
-"optional third argument, :func:`cmp` will only return -1, 0, or +1 as in "
-"previous versions of Python; otherwise it will call the appropriate method "
-"and can return any Python object."
+"to use; this is given as one of the strings ``\"<\"``, ``\"<=\"``, ``\">"
+"\"``, ``\">=\"``, ``\"==\"``, or ``\"!=\"``.  If called without the optional "
+"third argument, :func:`cmp` will only return -1, 0, or +1 as in previous "
+"versions of Python; otherwise it will call the appropriate method and can "
+"return any Python object."
 msgstr ""
 "La función incorporada ``cmp(A,B)`` puede utilizar la comparación "
 "enriquecida, y ahora acepta un argumento opcional que especifica la "
-"operación de comparación a utilizar; esto se da como una de las cadenas "
-"``\"<\"``, ``\"<=\"``, ``\">\"``, ``\">=\"``, ``\"==\"``, o ``\"!=\"``. Si "
-"se llama sin el tercer argumento opcional, :func:`cmp` sólo retornará -1, 0 "
-"o +1 como en versiones anteriores de Python; en caso contrario, llamará al "
+"operación de comparación a utilizar; esto se da como una de las cadenas ``\"<"
+"\"``, ``\"<=\"``, ``\">\"``, ``\">=\"``, ``\"==\"``, o ``\"!=\"``. Si se "
+"llama sin el tercer argumento opcional, :func:`cmp` sólo retornará -1, 0 o "
+"+1 como en versiones anteriores de Python; en caso contrario, llamará al "
 "método apropiado y puede retornar cualquier objeto de Python."
 
 #: ../Doc/whatsnew/2.1.rst:214
@@ -996,6 +997,13 @@ msgid ""
 "but registering software at the Vaults is optional, and many people did not "
 "bother."
 msgstr ""
+"Una queja común de los usuarios de Python es que no existe un solo catálogo "
+"de todos los módulos de Python existentes.  T. Middleton's Vault of "
+"Parnassus en ``www.vex.net/parnassus/`` (borrado en febrero de 2009, "
+"`disponible en Internet Archive Wayback Machine <https://web.archive.org/"
+"web/20090130140102/http://www.vex.net/parnassus/>`_) fue uno de los mayores "
+"catálogos de módulos de Python, pero registrar **software** en los archivos "
+"es opcional, y a mucha gente no le importó."
 
 #: ../Doc/whatsnew/2.1.rst:551
 msgid ""
