se me olvidó usar powrap jeje

--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -438,18 +438,18 @@ msgstr ""
 msgid ""
 "The built-in ``cmp(A,B)`` function can use the rich comparison machinery, "
 "and now accepts an optional argument specifying which comparison operation "
-"to use; this is given as one of the strings ``\"<\"``, ``\"<=\"``, ``\">"
-"\"``, ``\">=\"``, ``\"==\"``, or ``\"!=\"``.  If called without the optional "
-"third argument, :func:`cmp` will only return -1, 0, or +1 as in previous "
-"versions of Python; otherwise it will call the appropriate method and can "
-"return any Python object."
+"to use; this is given as one of the strings ``\"<\"``, ``\"<=\"``, "
+"``\">\"``, ``\">=\"``, ``\"==\"``, or ``\"!=\"``.  If called without the "
+"optional third argument, :func:`cmp` will only return -1, 0, or +1 as in "
+"previous versions of Python; otherwise it will call the appropriate method "
+"and can return any Python object."
 msgstr ""
 "La función incorporada ``cmp(A,B)`` puede utilizar la comparación "
 "enriquecida, y ahora acepta un argumento opcional que especifica la "
-"operación de comparación a utilizar; esto se da como una de las cadenas ``\"<"
-"\"``, ``\"<=\"``, ``\">\"``, ``\">=\"``, ``\"==\"``, o ``\"!=\"``. Si se "
-"llama sin el tercer argumento opcional, :func:`cmp` sólo retornará -1, 0 o "
-"+1 como en versiones anteriores de Python; en caso contrario, llamará al "
+"operación de comparación a utilizar; esto se da como una de las cadenas "
+"``\"<\"``, ``\"<=\"``, ``\">\"``, ``\">=\"``, ``\"==\"``, o ``\"!=\"``. Si "
+"se llama sin el tercer argumento opcional, :func:`cmp` sólo retornará -1, 0 "
+"o +1 como en versiones anteriores de Python; en caso contrario, llamará al "
 "método apropiado y puede retornar cualquier objeto de Python."
 
 #: ../Doc/whatsnew/2.1.rst:214
