--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-16 23:07+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_ES\n"
+"PO-Revision-Date: 2022-10-28 00:58+0200\n"
+"Last-Translator: Jaime Resano <resano.138736@e.unavarra.es>\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/whatsnew/3.8.rst:3
 msgid "What's New In Python 3.8"
@@ -3671,6 +3672,8 @@ msgid ""
 "The parameter ``digestmod`` for :func:`hmac.new` no longer uses the MD5 "
 "digest by default."
 msgstr ""
+"El parámetro ``digestmod`` de :func:`hmac.new` ya no usa el resumen MD5 por "
+"defecto."
 
 #: ../Doc/whatsnew/3.8.rst:2013
 msgid "Changes in the C API"
