--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -1002,8 +1002,8 @@ msgstr ""
 "Parnassus en ``www.vex.net/parnassus/`` (borrado en febrero de 2009, "
 "`disponible en Internet Archive Wayback Machine <https://web.archive.org/"
 "web/20090130140102/http://www.vex.net/parnassus/>`_) fue uno de los mayores "
-"catálogos de módulos de Python, pero registrar software en los archivos "
-"es opcional, y a mucha gente no le importó."
+"catálogos de módulos de Python, pero registrar software en los archivos es "
+"opcional, y a mucha gente no le importó."
 
 #: ../Doc/whatsnew/2.1.rst:551
 msgid ""
