Minor spell fix on logging-cookbook.po

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -2888,4 +2888,4 @@ msgstr ":ref:`Tutorial Básico <logging-basic-tutorial>`"
 
 #: ../Doc/howto/logging-cookbook.rst:3875
 msgid ":ref:`Advanced Tutorial <logging-advanced-tutorial>`"
-msgstr ":ref:`Tutoriol Avanzado <logging-advanced-tutorial>`"
+msgstr ":ref:`Tutorial Avanzado <logging-advanced-tutorial>`"
