--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-07 09:59+0100\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-28 00:38+0200\n"
+"Last-Translator: Jaime Resano <resano.138736@e.unavarra.es>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/whatsnew/2.1.rst:3
 msgid "What's New in Python 2.1"
@@ -996,6 +997,13 @@ msgid ""
 "but registering software at the Vaults is optional, and many people did not "
 "bother."
 msgstr ""
+"Una queja común de los usuarios de Python es que no existe un solo catálogo "
+"de todos los módulos de Python existentes.  T. Middleton's Vault of "
+"Parnassus en ``www.vex.net/parnassus/`` (borrado en febrero de 2009, "
+"`disponible en Internet Archive Wayback Machine <https://web.archive.org/"
+"web/20090130140102/http://www.vex.net/parnassus/>`_) fue uno de los mayores "
+"catálogos de módulos de Python, pero registrar software en los archivos es "
+"opcional, y a mucha gente no le importó."
 
 #: ../Doc/whatsnew/2.1.rst:551
 msgid ""
