--- a/c-api/import.po
+++ b/c-api/import.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-10-28 15:41+0200\n"
+"PO-Revision-Date: 2022-10-28 16:06+0200\n"
 "Last-Translator: Santiago Puerta <elwarxy@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -418,9 +418,9 @@ msgid ""
 msgstr ""
 "Este puntero se inicializa para apuntar a un array de registros :c:type:"
 "`struct _frozen`, terminado por uno cuyos registros son todos ``NULL`` o "
-"cero. Cuando se importa un módulo bloqueado, se busca en esta tabla. El "
+"cero. Cuando se importa un módulo congelado, se busca en esta tabla. El "
 "código de terceros podría jugar con esto para proporcionar una colección de "
-"módulos bloqueados creada dinámicamente."
+"módulos congelados creada dinámicamente."
 
 #: ../Doc/c-api/import.rst:276
 msgid ""
