Traducido archivo c-api/sys

--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-09 10:56+0800\n"
+"PO-Revision-Date: 2022-10-29 13:18-0500\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/c-api/sys.rst:6
 msgid "Operating System Utilities"
@@ -155,7 +156,6 @@ msgid "This function is superseded by :c:func:`PyOS_AfterFork_Child()`."
 msgstr "Esta función es reemplazada por :c:func:`PyOS_AfterFork_Child()`."
 
 #: ../Doc/c-api/sys.rst:97
-#, fuzzy
 msgid ""
 "Return true when the interpreter runs out of stack space.  This is a "
 "reliable check, but is only available when :const:`USE_STACKCHECK` is "
@@ -165,12 +165,12 @@ msgid ""
 msgstr ""
 "Retorna verdadero cuando el intérprete se queda sin espacio de pila (*stack "
 "space*). Esta es una verificación confiable, pero solo está disponible "
-"cuando :const:`USE_STACKCHECK` está definido (actualmente en Windows usando "
-"el compilador *Microsoft Visual C++*). :const:`USE_STACKCHECK` se definirá "
-"automáticamente; nunca debe cambiar la definición en su propio código."
+"cuando :const:`USE_STACKCHECK` está definido (actualmente en algunas "
+"versiones de Windows usando el compilador de *Microsoft Visual C++*). :const:"
+"`USE_STACKCHECK` se definirá automáticamente; nunca debe cambiar la "
+"definición en su propio código."
 
 #: ../Doc/c-api/sys.rst:106
-#, fuzzy
 msgid ""
 "Return the current signal handler for signal *i*.  This is a thin wrapper "
 "around either :c:func:`sigaction` or :c:func:`signal`.  Do not call those "
@@ -183,7 +183,6 @@ msgstr ""
 "*typedef* para :c:type:`void (\\*)(int)`."
 
 #: ../Doc/c-api/sys.rst:114
-#, fuzzy
 msgid ""
 "Set the signal handler for signal *i* to be *h*; return the old signal "
 "handler. This is a thin wrapper around either :c:func:`sigaction` or :c:func:"
@@ -191,7 +190,7 @@ msgid ""
 "`PyOS_sighandler_t` is a typedef alias for :c:expr:`void (\\*)(int)`."
 msgstr ""
 "Configura el controlador de señal para la señal *i* como *h*; retorna el "
-"antiguo manejador de señal. Esta es una pequeña envoltura alrededor de :c:"
+"antiguo controlador de señal. Esta es una pequeña envoltura alrededor de :c:"
 "func:`sigaction` o :c:func:`signal`. ¡No llame a esas funciones "
 "directamente! :c:type:`PyOS_sighandler_t` es un alias *typedef* para :c:type:"
 "`void (\\*)(int)`."
@@ -317,15 +316,14 @@ msgstr ""
 "sustituidos en el rango U+DC80..U+DCFF se convierten en bytes 0x80..0xFF."
 
 #: ../Doc/c-api/sys.rst:178
-#, fuzzy
 msgid ""
 "Return a pointer to a newly allocated byte string, use :c:func:`PyMem_Free` "
 "to free the memory. Return ``NULL`` on encoding error or memory allocation "
 "error."
 msgstr ""
-"Retorna un puntero a una cadena de bytes recién asignada, use :c:func:"
-"`PyMem_Free` para liberar la memoria. Retorna ``NULL`` en el error de "
-"codificación o error de asignación de memoria"
+"Retorna un puntero a una cadena de bytes recién asignada, usa :c:func:"
+"`PyMem_Free` para liberar la memoria. Retorna ``NULL`` si se genera un error "
+"de codificación o error de asignación de memoria."
 
 #: ../Doc/c-api/sys.rst:182
 msgid ""
@@ -353,13 +351,12 @@ msgstr ""
 "`PyUnicode_EncodeLocale`."
 
 #: ../Doc/c-api/sys.rst:208
-#, fuzzy
 msgid ""
 "The function now uses the UTF-8 encoding on Windows if :c:data:"
 "`Py_LegacyWindowsFSEncodingFlag` is zero."
 msgstr ""
 "La función ahora usa la codificación UTF-8 en Windows si :c:data:"
-"`Py_LegacyWindowsFSEncodingFlag` es cero;"
+"`Py_LegacyWindowsFSEncodingFlag` es cero."
 
 #: ../Doc/c-api/sys.rst:216
 msgid "System Functions"
@@ -409,6 +406,9 @@ msgid ""
 "warnoptions` should be used instead, see :ref:`Python Initialization "
 "Configuration <init-config>`."
 msgstr ""
+"Esta API se mantiene para conservar compatibilidad con versiones anteriores, "
+"en su lugar se debe usar: :c:member:`PyConfig.warnoptions`, ver :ref:"
+"`Configuración de inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/sys.rst:244
 msgid ""
@@ -443,6 +443,10 @@ msgid ""
 "be used instead, see :ref:`Python Initialization Configuration <init-"
 "config>`."
 msgstr ""
+"Esta API se mantiene para conservar compatibilidad con versiones anteriores, "
+"en su lugar se debe usar: :c:member:`PyConfig.module_search_paths` y :c:"
+"member:`PyConfig.module_search_paths_set`, ver :ref:`Python Initialization "
+"Configuration <init-config>`."
 
 #: ../Doc/c-api/sys.rst:272
 msgid ""
@@ -523,6 +527,9 @@ msgid ""
 "xoptions` should be used instead, see :ref:`Python Initialization "
 "Configuration <init-config>`."
 msgstr ""
+"Esta API se mantiene para conservar compatibilidad con versiones anteriores, "
+"en su lugar se debe usar: :c:member:`PyConfig.xoptions`, ver :ref:"
+"`Configuración de inicialización de Python <init-config>`."
 
 #: ../Doc/c-api/sys.rst:320
 msgid ""
@@ -571,41 +578,37 @@ msgstr ""
 "puede causar fugas de referencia)."
 
 #: ../Doc/c-api/sys.rst:350
-#, fuzzy
 msgid ""
 "Note that ``#`` format characters should always be treated as :c:type:"
 "`Py_ssize_t`, regardless of whether ``PY_SSIZE_T_CLEAN`` was defined."
 msgstr ""
-"Tenga en cuenta que los caracteres de formato ``#`` siempre deben tratarse "
-"como ``Py_ssize_t``, independientemente de si se definió "
-"``PY_SSIZE_T_CLEAN``."
+"Tenga en cuenta que los caracteres de formato ``#`` deben tratarse como "
+"``Py_ssize_t``, independientemente de si se definió ``PY_SSIZE_T_CLEAN``."
 
 #: ../Doc/c-api/sys.rst:353
 msgid ":func:`sys.audit` performs the same function from Python code."
 msgstr ":func:`sys.audit` realiza la misma función del código Python."
 
 #: ../Doc/c-api/sys.rst:359
-#, fuzzy
 msgid ""
 "Require :c:type:`Py_ssize_t` for ``#`` format characters. Previously, an "
 "unavoidable deprecation warning was raised."
 msgstr ""
-"Requiere ``Py_ssize_t`` para los caracteres de formato ``#``. Anteriormente, "
-"se lanza una advertencia de deprecación inevitable."
+"Requiere :c:type:`Py_ssize_t` para los caracteres de formato ``#``. "
+"Anteriormente, se generaba una advertencia de deprecación inevitable."
 
 #: ../Doc/c-api/sys.rst:365
-#, fuzzy
 msgid ""
 "Append the callable *hook* to the list of active auditing hooks. Return zero "
 "on success and non-zero on failure. If the runtime has been initialized, "
 "also set an error on failure. Hooks added through this API are called for "
 "all interpreters created by the runtime."
 msgstr ""
-"Agrega el gancho *hook* invocable a la lista de enlaces de auditoría "
-"activos. Retorna cero para el éxito y no cero en caso de error. Si el tiempo "
-"de ejecución se ha inicializado, también configura un error en caso de "
-"fallo. Los ganchos agregados a través de esta API se llaman para todos los "
-"intérpretes creados por el tiempo de ejecución."
+"Agrega el *hook* invocable a la lista de hooks de auditoría activos. Retorna "
+"cero para el éxito y no cero en caso de error. Si el tiempo de ejecución se "
+"ha inicializado, también configura un error en caso de fallo. Los hooks "
+"agregados a través de esta API se llaman para todos los intérpretes creados "
+"por el tiempo de ejecución."
 
 #: ../Doc/c-api/sys.rst:371
 msgid ""
@@ -631,17 +634,16 @@ msgstr ""
 "se silenciarán)."
 
 #: ../Doc/c-api/sys.rst:380
-#, fuzzy
 msgid ""
 "The hook function is of type :c:expr:`int (*)(const char *event, PyObject "
 "*args, void *userData)`, where *args* is guaranteed to be a :c:type:"
 "`PyTupleObject`. The hook function is always called with the GIL held by the "
 "Python interpreter that raised the event."
 msgstr ""
-"La función gancho (*hook*) es de tipo :c:type:`int (*)(const char *event, "
-"PyObject *args, void *userData)`, donde *args* está garantizado como un :c:"
-"type:`PyTupleObject`. La función gancho siempre se llama con el GIL en poder "
-"del intérprete de Python que lanzó el evento."
+"La función (*hook*) es de tipo :c:expr:`int (*)(const char *event, PyObject "
+"*args, void *userData)`, donde *args* está garantizado como un :c:type:"
+"`PyTupleObject`. La función hook siempre se llama con el GIL en poder del "
+"intérprete de Python que lanzó el evento."
 
 #: ../Doc/c-api/sys.rst:385
 msgid ""
